[editor] fix alignment toolbar scroll in windows (#1327)

--- a/packages/editor/web/statics/styles/inline-toolbar-dropdown-button.scss
+++ b/packages/editor/web/statics/styles/inline-toolbar-dropdown-button.scss
@@ -7,7 +7,6 @@
 .inlineToolbarDropdown_options {
   position: absolute;
   top: 10px;
-  overflow: scroll;
   left: -3px;
   padding: 0 3px;
   background: white;
